#55 fix: some fixes for storing last open resource of workspace
